--- a/css/style.css
+++ b/css/style.css
@@ -641,7 +641,7 @@ a:hover {
 .site {
 	padding: 0 24px;
 	padding: 0 1.714285714rem;
-	background-color: rgba(255, 255, 255, 0.20); /* Main Page */
+	background-color: rgba(255, 255, 255, 0.70); /* Main Page */
 }
 .site-content {
 	margin: 24px 0 0;
@@ -890,6 +890,7 @@ article.sticky .featured-post {
 .comment-content h5,
 .entry-content h6,
 .comment-content h6 {
+	color: #ff7800;
 	margin: 24px 0;
 	margin: 1.714285714rem 0;
 	line-height: 1.714285714;
@@ -1015,7 +1016,7 @@ article.sticky .featured-post {
     border: 1px solid rgba(0, 0, 0, 0.24);
     font-family: Consolas, Monaco, Lucida Console, monospace;
     margin-bottom: 15px;
-    overflow: auto;
+   /* overflow: auto;*/
     padding: 7px 15px;
     -webkit-border-radius: 2px;
     border-radius: 2px;
