--- a/css/style.css
+++ b/css/style.css
@@ -603,6 +603,7 @@ a:hover {
   top: 0;
   width: 100%;
   z-index: -1;
+	opacity: .8;
 }
 
 /* Achive */
@@ -641,6 +642,8 @@ a:hover {
 .site {
 	padding: 0 24px;
 	padding: 0 1.714285714rem;
+	border-radius: 5px;
+	box-shadow: 0 2px 6px rgba(0, 0, 0, 0.65);
 	background-color: rgba(255, 255, 255, 0.70); /* Main Page */
 }
 .site-content {
@@ -664,13 +667,15 @@ a:hover {
 
 .site-header h1 a,
 .site-header h2 a {
-	color: #515151;
+	color: rgb(81, 156, 158);
 	display: inline-block;
 	text-decoration: none;
 }
-.site-header h1 a:hover,
-.site-header h2 a:hover {
-	color: rgb(81, 156, 158); /* Main Title Hover */
+.site-header h2 a{
+	-webkit-user-select: none;
+}
+.site-header h1 a:hover{
+	color: #515151;/* Main Title Hover */
 }
 .site-header h1 {
 	font-size: 24px;
@@ -1350,6 +1355,7 @@ article.format-quote .entry-content blockquote {
 	font-weight: normal;
 	line-height: 1.6;
 	margin: 0;
+	color: rgb(81, 156, 158);
 }
 .format-status .entry-header h2 {
 	font-size: 12px;
@@ -1357,6 +1363,7 @@ article.format-quote .entry-content blockquote {
 	font-weight: normal;
 	line-height: 2;
 	margin: 0;
+	color: rgb(81, 156, 158);
 }
 .format-status .entry-header header a {
 	color: #757575;
